--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -21,33 +21,21 @@
     </a>
 
     <span>
-      {% if App.Session.has('is_auth') and App.Session.get('is_sysadmin') %}
-        <a href='sysconfig.php'>{{ 'Sysadmin panel'|trans }}</a>
-      {% endif %}
-
-      {% if App.Session.has('is_auth') and App.Session.get('is_admin') %}
-      {% set unvalidatedUsersCount = App.Users.readAllFromTeam()|filter(u => u.validated == 0)|length %}
-        <a href='admin.php'>{{ 'Admin panel'|trans }}
-
-          {% if unvalidatedUsersCount > 0 %}
-            <span class='badge badge-dark p-1' title='{{ 'Unconfirmed users'|trans }}'>{{ unvalidatedUsersCount }}</span>
-            <span class='sr-only'>{{ 'Unconfirmed users'|trans }}</span>
-          {% endif %}
-        </a>
-      {% endif %}
-
-      {% if App.Session.has('is_auth') and not App.Session.has('is_anon') %}
-        <a href='ucp.php'>{{ 'User panel'|trans }}</a>
-      {% endif %}
+      {%- if App.Config.configArr.privacy_policy -%}
+        <a href='#' data-action='show-privacy-policy'>{{ 'Privacy policy'|trans }}</a>
+      {%- endif -%}
+      {%- if App.Config.configArr.terms_of_service -%}
+        <a href='#' data-action='show-terms-of-service'>{{ 'Terms of service'|trans }}</a>
+      {%- endif -%}
+      {%- if App.Config.configArr.a11y_statement -%}
+        <a href='#' data-action='show-a11y-statement'>{{ 'Accessibility statement'|trans }}</a>
+      {%- endif -%}
     </span>
   </p>
 
   <p class='footer-right'>
     {{ 'Powered by'|trans }}
     <a href='https://www.elabftw.net'>eLabFTW</a> {{ App.Session.has('is_auth') ? constant('Elabftw\\Elabftw\\App::INSTALLED_VERSION') }}<br>
-    {% if App.Config.configArr.privacy_policy %}
-      <a href='#' data-action='show-privacy-policy'>{{ 'Privacy policy'|trans }}</a><br>
-    {% endif %}
         {{ 'Page generated in'|trans }} {{ generationTime() }} {{ 'seconds'|trans }}
     {% if App.Config.configArr.debug %}
         ({{ numberOfQueries() }} SQL)
