rework show mode

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,6 +9,7 @@ $darkgray: #343434;
 $nottoodarkgray: rgba(255, 255, 255, 0.51);
 $maingray: #595959;
 $verylightgray: #f2f2f2;
+$firstgray: #dbdbdb;
 $lightgray: #626262;
 $lightwhite: #f4f6f7;
 $lightgraybutnottoolight: #d6d6d6;
@@ -20,6 +21,8 @@ $lightblue: #c4f9ff;
 $darkred: #dd1e00;
 $lightred: #ffc1b7;
 $green: #54aa08;
+$lightgold: #eddec6;
+$gold: #d4ae75;
 
 /* font awesome */
 $fa-font-path: '/assets/fonts';
