--- a/src/templates/show-item.html
+++ b/src/templates/show-item.html
@@ -12,79 +12,103 @@
   <div class='col-xs-12 col-sm-6 col-md-6 col-lg-4'>
 {% endif %}
 
-  <section class='item item-show' id='parent_{{ randomId }}' style='--opacity:{{ opacity }}; --left-color: #{{ item.color }};'>
-    {% if isPinned %}
-      <p class='float-right d-inline'>
-        <a class='elab-tooltip ml-2' data-action='toggle-pin' data-id='{{ item.id }}' href='#'>
-          <span>{{ 'Toggle pin'|trans }}</span>
-          <i class='fas fa-thumbtack'title="{{ 'Pinned'|trans }}"></i>
-        </a>
-      </p>
-    {% endif %}
+  <section class='item pl-3 d-flex' id='parent_{{ randomId }}' style='--opacity:{{ opacity }}; --left-color: #{{ item.color }};'>
 
-    <p class='title'>
+    {# left part: lock icon #}
+    <div class='d-flex align-items-center'>
       {# lock icon #}
       {% if item.locked %}
-        <i class='fas fa-lock' style='color:#29AEB9'></i>
+        <div class='lock-icon-show p-2 rounded mr-2' style='background-color:#{{ item.color }}'>
+          <i class='fas fa-lock fa-fw fa-2x'></i>
+        </div>
+      {% endif %}
+    </div>
+
+    {# middle part: category, title, icons and tags #}
+    <div>
+      {# first line #}
+      <div>
+        {# rating #}
+        {% if item.rating > 0 %}
+          {{ item.rating|stars|raw }}
+        {% endif %}
+        {# category #}
+        <span class='item-category'><a style='color:#{{ item.color }}' href='?cat={{ item.category_id }}'>{{ item.category }}</a></span>
+      </div>
+      {# end first line #}
+
+      {# second line: title #}
+      <div class='d-flex justify-content-between title'>
+        <p><a href='{{ Entity.page }}.php?mode=view&id={{ item.id }}'>{{ item.title|raw }}</a></p>
+      </div>
+      {# end second line #}
+
+      {% if item.next_step|length > 0 %}
+        {% set stepsArr = item.next_step|split('|') %}
+        {% set next = stepsArr|first %}
+        <p class='item-next'>
+          {{ 'Next step'|trans }}: <span class='item-next-step'>{{ next|raw }}</span>
+        </p>
       {% endif %}
 
-      <a href='{{ Entity.page }}.php?mode=view&id={{ item.id }}'>{{ item.title|raw }}</a>
-    </p>
-    {% if item.next_step|length > 0 %}
-      {% set stepsArr = item.next_step|split('|') %}
-      {% set next = stepsArr|first %}
-      <p class='item-next'>
-        {{ 'Next step'|trans }}: <span class='item-next-step'>{{ next|raw }}</span>
+      <p>
+        {# checkbox #}
+        <input autocomplete='off' type='checkbox' data-action='checkbox-entity' data-id='{{ item.id }}' data-randomid='{{ randomId }}' data-type='{{ Entity.type }}' aria-label='Select' style='width:15px;vertical-align:0.5px;' />
+        {# timestamp icon #}
+        {% if item.timestamped %}
+          <i class='far fa-calendar-check fa-fw'></i>
+        {% endif %}
+
+        {# show attached if there is a file attached #}
+        {% if item.has_attachment %}
+          <i class='fas fa-paperclip fa-fw'></i>
+        {% endif %}
+        {% if item.has_comment %}
+          <i class='fas fa-comments fa-fw'></i>
+        {% endif %}
+
+        {{ owner|raw }}
+
+        {% set itemtagsArr = tagsArr[item.id] %}
+        {% if itemtagsArr|length > 0 %}
+          <span class='d-inline-flex flex-wrap'><i class='fas fa-tags mr-1 fa-fw'></i>
+            {% for tag in itemtagsArr %}
+              <a class='tag mathjax-ignore margin-1px' href='{{ Entity.page }}.php?mode=show&tags%5B%5D={{ tag.tag|url_encode }}'>{{ tag.tag|raw }}</a>
+            {% endfor %}
+          </span>
+        {% endif %}
       </p>
-    {% endif %}
 
-    <p class='item-info'>
-      {# checkbox #}
-      <input autocomplete='off' type='checkbox' data-action='checkbox-entity' data-id='{{ item.id }}' data-randomid='{{ randomId }}' data-type='{{ Entity.type }}' aria-label='Select' style='width:15px;vertical-align:0.5px;' />
-      {# edit icon #}
-      {% if not item.locked and (item.userid == App.Users.userData.userid or Entity.type == 'items' or App.Session.get('is_admin')) %}
-        <a href='{{ Entity.page }}.php?mode=edit&id={{ item.id }}' title='{{ 'Edit'|trans }}'><i class='fas fa-pencil-alt link-like'></i></a>
-      {% endif %}
-      {# toggle body #}
-      <span data-type='{{ Entity.type }}' data-id='{{ item.id }}' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}'>
-        <i class='fas fa-plus-circle'></i>
-      </span>
-      {# category #}
-      <span class='item-category'><a style='color:#{{ item.color }}' href='?cat={{ item.category_id }}'>{{ item.category }}</a></span>
-      {# date #}
-      <span class='item-date'><i class='far fa-calendar-alt mr-1'></i>{{ item.date|date('Y-m-d') }}</span>
-      {# timestamp icon #}
-      {% if item.timestamped %}
-        <i class='far fa-calendar-check'></i>
-      {% endif %}
+      {# container to hold the body of the entity if it is toggled with the +/- icon #}
+      {# a random id is used because with the favorites the item can appear two times on the page so the old blah_123 doesn't work well #}
+      <div hidden id='{{ randomId }}' style='overflow:auto;margin: 10px 0 0 20px'></div>
+    </div>
 
-      {# show attached if there is a file attached #}
-      {% if item.has_attachment %}
-        <i class='fas fa-paperclip'></i>
-      {% endif %}
-      {% if item.has_comment %}
-        <i class='fas fa-comments'></i>
-      {% endif %}
-
-      {% if item.rating > 0 %}
-        {{ item.rating|stars|raw }}
-      {% endif %}
-
-      {{ owner|raw }}
-
-      {% set itemtagsArr = tagsArr[item.id] %}
-      {% if itemtagsArr|length > 0 %}
-        <span class='tags d-flex flex-wrap'><i class='fas fa-tags mr-1'></i>
-          {% for tag in itemtagsArr %}
-            <a class='tag mathjax-ignore margin-1px' href='{{ Entity.page }}.php?mode=show&tags%5B%5D={{ tag.tag|url_encode }}'>{{ tag.tag|raw }}</a>
-          {% endfor %}
-        </span>
-      {% endif %}
-    </p>
-
-    {# container to hold the body of the entity if it is toggled with the +/- icon #}
-    {# a random id is used because with the favorites the item can appear two times on the page so the old blah_123 doesn't work well #}
-    <div hidden id='{{ randomId }}' style='overflow:auto;margin: 10px 0 0 20px'></div>
-
+    {# third part: end container #}
+    <div class='d-flex justify-content-end ml-auto'>
+      {# column for date and icons #}
+      <div class='d-flex flex-column ml-auto'>
+        {# date and pinned icon #}
+        <div>
+          <span class='item-date'>{{ 'Started on'|trans }} {{ item.date|date('Y-m-d') }}</span>
+          {% if isPinned %}
+            <a class='elab-tooltip ml-2' data-action='toggle-pin' data-id='{{ item.id }}' href='#'>
+              <span>{{ 'Toggle pin'|trans }}</span>
+              <i class='fas fa-thumbtack fa-fw'title="{{ 'Pinned'|trans }}"></i>
+            </a>
+          {% endif %}
+        </div>
+        <div class='ml-auto'>
+          {# edit icon #}
+          {% if not item.locked and (item.userid == App.Users.userData.userid or Entity.type == 'items' or App.Session.get('is_admin')) %}
+            <a href='{{ Entity.page }}.php?mode=edit&id={{ item.id }}' title='{{ 'Edit'|trans }}'><i class='fas fa-pencil-alt fa-fw link-like mr-3'></i></a>
+          {% endif %}
+          {# toggle body #}
+          <span data-type='{{ Entity.type }}' data-id='{{ item.id }}' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}'>
+            <i class='fas fa-square-plus fa-fw'></i>
+          </span>
+        </div>
+      </div>
+    </div>
   </section>
 </div>
