rename css color

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,7 +8,7 @@
 $darkgray: #343434;
 $nottoodarkgray: rgba(255, 255, 255, 0.51);
 $maingray: #595959;
-$verylightgray: #f2f2f2;
+$mainbackground: #f2f2f2;
 $firstgray: #dbdbdb;
 $lightgray: #626262;
 $lightwhite: #f4f6f7;
