--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -63,7 +63,7 @@ $text-muted: $lightgray;
 }
 
 body {
-    background: $verylightgray;
+    background: $mainbackground;
 }
 
 /* little shadow on top of the screen for no reasons */
