--- a/src/templates/show-item-table.html
+++ b/src/templates/show-item-table.html
@@ -72,7 +72,7 @@
 
   <td class='item-rating'>
     {% if item.rating > 0 %}
-      {{ item.rating|stars|raw }}
+      <span class='rating-show rounded p-1'><i class='fas fa-star' title='☻'></i>{{ item.rating }}</span>
     {% endif %}
   </td>
 
