--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -10,6 +10,7 @@ $nottoodarkgray: rgba(255, 255, 255, 0.51);
 $maingray: #595959;
 $mainbackground: #f2f2f2;
 $firstgray: #dbdbdb;
+$secondlevel: #bdbdbd;
 $lightgray: #626262;
 $lightwhite: #f4f6f7;
 $lightgraybutnottoolight: #d6d6d6;
