--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -61,7 +61,7 @@
 
 <!-- Modal for privacy policy -->
 <div class='modal fade' id='privacyModal' tabindex='-1' role='dialog' aria-labelledby='privacyModalLabel' aria-hidden='true'>
-  <div class='modal-dialog' role='document'>
+  <div class='modal-dialog modal-xl' role='document'>
     <div class='modal-content'>
       <div class='modal-header'>
         <h5 class='modal-title' id='privacyModalLabel'>{{ 'Privacy policy'|trans }}</h5>
