--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -152,7 +152,7 @@
         <i aria-hidden='true' class='fas fa-clipboard-{{ Entity.type == 'experiments' ? 'check' : 'list' }}'></i>
         <span class='malleableCategory hl-hover-gray rounded p-1'>{{ Entity.entityData.category }}</span>
           {% if Entity.entityData.rating > 0 %}
-            {{ Entity.entityData.rating|stars|raw }}
+            <span class='rating-show rounded p-1'><i class='fas fa-star' title='☻'></i>{{ Entity.entityData.rating }}</span>
           {% endif %}
         <!-- build the tag array -->
         {% if Entity.entityData.tags|length > 0 %}
@@ -258,9 +258,9 @@
   {% include 'json-editor.html' %}
 {% endif %}
 
-<section id='commentsDiv'>
+<section class='box' id='commentsDiv'>
   {% if App.Session.get('is_auth') and not App.Session.has('is_anon') %}
-    <div id='comment' class='box'>
+    <div id='comment'>
     <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' data-icon='commentsIcon' class='d-inline'><i id='commentsIcon' class='fas fa-chevron-circle-down'></i> <i class='fas fa-fw fa-comments'></i> {{ 'Comments'|trans }}</h3>
     <div class='mt-2' id='commentsInnerDiv' data-save-hidden='commentsInnerDiv'>
         {% for comment in Entity.entityData.comments %}
