make left panel opener different

--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -153,10 +153,10 @@
 </nav>
 
 <!-- SHOW FAVTAGS PANEL -->
-<div class='pr-2 float-left bounce-right' id='favtags-opener' hidden>
-  <a data-action='toggle-favtags' title='{{ 'Open favorite tags'|trans }}'>
-    <i class='fas fa-chevron-right fa-2x'></i>
-  </a>
+<div class='pr-2 mt-3 float-left bounce-right' id='favtags-opener' hidden>
+  <div class='left-panel-opener' data-action='toggle-favtags' title='{{ 'Open favorite tags'|trans }}'>
+    <i class='fas fa-caret-right'></i>
+  </div>
 </div>
 <div class='real-container'>
 
