--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -583,6 +583,17 @@ table th {
     }
 }
 
+.left-panel-opener {
+    background-color: $darkgray;
+    border-radius: 0 5px 5px 0;
+    padding: 10px 5px;
+
+    i {
+        color: $firstgray;
+    }
+
+}
+
 /* OVERLAY */
 .overlay {
     border-radius: 5px;
